# histogram

./: README  histogram.cabal
Data/: Histogram.hs
Data/Histogram/: Internal.hs  Mutable.hs
tools/: hist.hs
